tests/bad/function_incorrect_arg_count.mu
fn f(a: int, b: int) {
    let mut c = a
}

f(5)